# vidwall

./: PKGBUILD  README.md  flake.nix  meson.build  shell.nix
include/: cli_args.h  hyprland_ipc.h
src/: cli_args.cpp  hyprland_ipc.cpp  main.cpp
